[package]
name = "v11"
version = "0.0.4"
authors = ["neptunepink <purpleposeidon@gmail.com>"]

[lib]

[dev-dependencies]
rand = "*"
serde_json = "*"
bincode = "*"

[dependencies]
v11_macros = { path = "./macros" }
procedural-masquerade = "^0.1.2"
rustc-serialize = "*"
serde = "1.0"
serde_derive = "1.0"
erased-serde = "0.3.5"
itertools = "0.4.16"
bit-vec = "0.5.0"
num-traits = "*"
lazy_static = "*"

mopa = "0.2.*"
# "my own personal Any", allows downcasting or something.

# OwningRef: https://kimundi.github.io/owning-ref-rs/owning_ref/struct.OwningRef.html

# parking-lot is kind of awesome

[features]
doc = []
