[package]
name = "v11"
version = "0.0.5"
authors = ["neptunepink <purpleposeidon@gmail.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/purpleposeidon/v11"
homepage = "https://github.com/purpleposeidon/v11"

[lib]

[dev-dependencies]
rand = "*"
serde_json = "*"
bincode = "*"

[dependencies]
v11_macros = { path = "./macros", version = "0.0.5" }
procedural-masquerade = "^0.1.2"
serde = "1.0"
serde_derive = "1.0"
erased-serde = "0.3.5"
itertools = "0.4.16"
bit-vec = "0.5.0"
num-traits = "*"
lazy_static = "*"
mopa = "0.2.*"

# OwningRef: https://kimundi.github.io/owning-ref-rs/owning_ref/struct.OwningRef.html

# parking-lot is kind of awesome

[features]
doc = []
