[package]
name = "v11"
version = "0.0.8"
authors = ["neptunepink <purpleposeidon@gmail.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/purpleposeidon/v11"
homepage = "https://github.com/purpleposeidon/v11"
description = "A data engine for Data Oriented Design"
readme = "README.md"

[lib]

[dev-dependencies]
rand = "0.5"
serde_json = "1.0"

[dependencies]
v11_macros = { path = "./macros", version = "0.0.7" }
procedural-masquerade = "^0.1.2"
serde = "1.0"
serde_derive = "1.0"
erased-serde = "0.3.5"
itertools = "0.4.16"
bit-vec = "0.5.0"
num-traits = "0.2.5"
lazy_static = "1.0"
mopa = "0.2.*"

# OwningRef: https://kimundi.github.io/owning-ref-rs/owning_ref/struct.OwningRef.html

# parking-lot is kind of awesome

[features]
doc = []
