[package]
name = "v11_macros"
version = "0.0.5"
authors = ["neptunepink <purpleposeidon@gmail.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/purpleposeidon/v11"
homepage = "https://github.com/purpleposeidon/v11"
description = "Macros for `v11`."

[lib]
proc-macro = true
path = "lib.rs"

[dependencies]
procedural-masquerade = "0.1.1"
syntex = "0.58.*"
syntex_syntax = "0.58.*"
quote = "0.3.*"
rustfmt = "0.10.0"
